<resources xmlns:to="http://schemas.android.com/apk/res-auto">
    <string name="app_name">WorkActiv</string>
    <string name="powered_by_sycra">Powered by Sycra</string>
    <string name="app_name_trademark">WorkActiv®</string>
    <string name="trademark_r">®</string>
    <string name="title_home">Home</string>
    <string name="search">Search</string>
    <string name="gateway_conn">Gateway Connection</string>
    <string name="settings_database">Database</string>
    <string name="privacy_security">Privacy and Security</string>
    <string name="status">Status</string>
    <string name="version_update">Version Update</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="connection_status">Connected</string>
    <string name="about">About</string>
    <string name="import_database">Import file</string>
    <string name="ip_heading">IP ADDRESS</string>
    <string name="port_heading">PORT</string>
    <string name="credential_heading">CREDENTIALS</string>
    <string name="mini_username">Username</string>
    <string name="mini_password">Password</string>
    <string name="settings_account">Account</string>
    <string name="all_lights">All Lights</string>
    <string name="title_control">Control</string>
    <string name="title_settings">Settings</string>
    <string name="refresh_test">Refresh</string>
    <string name="scan">Scan</string>
    <string name="save">Save</string>
    <string name="ack">ACKNOWLEDGMENT</string>
    <string name="term_n_conditions_title">Terms and Conditions</string>
    <string name="input_password_account_hint">Input ID/email</string>
    <string name="login_heading">Login</string>
    <string name="work_active_mode">WorkActiv® Mode</string>
    <string name="meeting_room">Meeting Room</string>
    <string name="sycra_station_conn">SycraStation Connection</string>
    <string name="auto_mode">Automatic Mode</string>
    <string name="master_switch">Master Switch</string>
    <string name="sycra_tech">Sycra Technologies</string>
    <string name="work_active_mode_desc">This mode optimizes Human Centric Lighting in the office to promote productivity and healthy environment with maximum energy saving</string>
    <string name="boost_mode">Boost Mode</string>
    <string name="boost_mode_desc">This mode sets cooler color temperature and adjusts spectrum in the room to boost work productivity. (Recommended during cloudy weather)</string>
    <string name="comfort_mode">Comfort Mode</string>
    <string name="contact_us">CONTACT US</string>
    <string name="limitation_heading">LIMITATION OF LIABILITY</string>
    <string name="comfort_mode_desc">This mode sets a warmer tone to your room to optimize cooling down and relaxation while saving energy.</string>
    <string name="all_lights_desc">Adjust Brightness and color temperature to your comfort. Reactivate WorkActiv mode to set values by default.</string>
    <string name="meeting_room_desc">This mode allows full control of the system through the APP. Values are all set automatically thanks to the gathered data.</string>
    <string name="update_trademark">WorkActiv™ is a trademark of Sycra Technologies Ltd. \n
        Copyright© 2017~2022. All rights Reserved. \n
         www.sycratech.com</string>
    <string name="INTERPRETATION_AND_DEFINITIONS">INTERPRETATION AND DEFINITIONS</string>
    <string name="interpretion">INTERPRETATION</string>
    <string name="phar_one">The words of which the initial letter is capitalized have meanings defined under the following conditions.The following definitions shall have the same meaning regardless of whether they appear in singular or in plural</string>
    <string name="defination">DEFINITIONS</string>
    <string name="termination_heading">TERMINATION</string>
    <string name="dispute_heading">DISPUTES RESOLUTION</string>
    <string name="links_to_others_heading">LINKS TO OTHER WEBSITES</string>
    <string name="govering_law">GOVERNING LAW</string>
    <string name="forEU">FOR EUROPEAN UNION (EU) USERS</string>
    <string name="forUs">UNITED STATES LEGAL COMPLIANCE</string>
    <string name="waiver_big">SEVERABILITY AND WAIVER</string>
    <string name="waiver_small">SEVERABILITY</string>
    <string name="changes_to_terms">CHANGES TO THESE TERMS AND CONDITIONS</string>
    <string name="main_waiver_small_title">WAIVER</string>
    <string name="translation_tittle">TRANSLATION INTERPRETATION</string>
    <string name="as_is_heading">\"AS IS\" AND "\AS AVAILABLE\" \n DISCLAIMER</string>
    <string name="def1">For the purposes of these Terms and Conditions:</string>
    <string name="textbold"><b>Application</b>  means the software   program provided by the Company downloaded by You on any electronic device, named WorkActiv App. 	Application Store means the digital distribution service operated and developed by Apple Inc. (Apple App Store) or Google Inc. (Google Play Store) in which the Application has been downloaded. \n
<b>Affiliate</b>  means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority. \n
<b>Country</b>  refers to: China \n
<b>Company</b> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Sycra Technologies Limited, 2/F Building 2, Kelunte science park No. 7 Ganli 6th Road, Longgang district, 518000 Shenzhen, China.\n
<b>Device</b>  means any device that can access the Service such as a computer, a cellphone or a digital tablet.\n
<b>Service</b> refers to the Application.\n
<b>Terms and Conditions</b>  (also referred as "Terms") mean these Terms and Conditions that form the entire agreement between You and the Company regarding the use of the Service. This Terms and Conditions agreement has been created with the help of the Free Terms and Conditions Generator.\n
<b>Third-party Social</b> Media Service means any services or content (including data, information, products or services) provided by a third-party that may be displayed, included or made available by the Service.\n
<b>You</b>	 means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.\n
</string>
    <string name="ack_text">These are the Terms and Conditions governing the use of this Service and the agreement that operates between You and the Company. These Terms and Conditions set out the rights and obligations of all users regarding the use of the Service.\n
Your access to and use of the Service is conditioned on Your acceptance of and compliance with these Terms and Conditions. These Terms and Conditions apply to all visitors, users and others who access or use the Service.\n
By accessing or using the Service You agree to be bound by these Terms and Conditions. If You disagree with any part of these Terms and Conditions then You may not access the Service.\n
You represent that you are over the age of 18. The Company does not permit those under 18 to use the Service.\n
Your access to and use of the Service is also conditioned on Your acceptance of and compliance with the Privacy Policy of the Company. Our Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your personal information when You use the Application or the Website and tells You about Your privacy rights and how the law protects You.Please read Our Privacy Policy carefully before using Our Service.</string>
    <string name="other_link_text">Our Service may contain links to third-party web sites or services that are not owned or controlled by the Company.\n
The Company has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third-party web sites or services.\n You further acknowledge and agree that the Company shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with the use of or reliance on any such content, goods or services available on or through any such web sites or services.\n
We strongly advise You to read the terms and conditions and privacy policies of any third-party web sites or services that You visit.
</string>
    <string name="termination_text">We may terminate or suspend Your access immediately, without prior notice or liability, for any reason whatsoever, \n including without limitation if You breach these Terms and Conditions. \n
Upon termination, Your right to use the Service will cease immediately.
</string>
<string name="limitation_text">Notwithstanding any damages that You might incur, the entire liability of the Company and any of its suppliers under any provision of this Terms and Your exclusive remedy for all of the foregoing shall be limited to the amount actually paid by You through the Service or 100 USD if You have not purchased anything through the Service. \n
To the maximum extent permitted by applicable law, in no event shall the Company or its suppliers be liable for any special, incidental, indirect, or consequential damages whatsoever (including, but not limited to, damages for loss of profits, loss of data or other information, for business interruption, for personal injury, loss of privacy arising out of or in any way related to the use of or inability to use the Service, third-party software and or third-party hardware used with the Service, or otherwise in connection with any provision of this Terms), even if the Company or any supplier has been advised of the possibility of such damages and even if the remedy fails of its essential purpose.\n
Some states do not allow the exclusion of implied warranties or limitation of liability for incidental or consequential damages, which means that some of the above limitations may not apply. \n In these states, each party\'s liability will be limited to the greatest extent permitted by law.</string>
</resources>