<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".ui.DatabaseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/database_back_settings"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="140dp"
            android:layout_height="67dp"
            android:drawableLeft="@drawable/ic_baseline_keyboard_arrow_left_24"
            android:text="@string/title_settings"
            android:textSize="13.00sp"
            app:layout_constraintBottom_toTopOf="@+id/database_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/database_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo2_regular"
            android:text="@string/settings_database"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/data_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.751" />

        <androidx.cardview.widget.CardView
            android:id="@+id/data_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/database_import"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="200dp"

                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_baseline_attachment_24"
                android:text="@string/import_database"
                android:textSize="@dimen/_13sdp" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
