<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.GatewayFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/gateway_back_settings"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="123dp"
            android:layout_height="55dp"
            android:layout_marginStart="-4dp"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/ic_baseline_keyboard_arrow_left_24"
            android:text="@string/title_settings"
            android:textSize="13.00sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/gateway_saveBtn"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="129dp"
            android:layout_height="54dp"
            android:text="@string/save"
            android:textSize="13.00dp"
            app:layout_constraintBottom_toTopOf="@+id/sycrastation_conn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.993"
            app:layout_constraintStart_toEndOf="@+id/gateway_back_settings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.135" />

        <TextView
            android:id="@+id/sycrastation_conn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/exo2_regular"
            android:text="@string/sycra_station_conn"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gateway_back_settings" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            app:cardCornerRadius="@dimen/_7sdp"
            app:cardElevation="0dp"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sycrastation_conn"
            app:layout_constraintVertical_bias="0.133">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/qr_scanTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:fontFamily="@font/exo2_regular"
                    android:text="@string/scan"
                    android:textColor="#333333"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.234" />


                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/btnQRScan"
                    android:layout_width="42dp"
                    android:layout_height="38dp"
                    android:backgroundTint="#ffffff"
                    android:drawableLeft="@drawable/ic_baseline_qr_code_scanner_24"
                    app:layout_constraintBottom_toTopOf="@+id/gateway_seperator_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.909"
                    app:layout_constraintStart_toEndOf="@+id/qr_scanTxt"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.484" />

                <View
                    android:id="@+id/gateway_seperator_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/gray_background"
                    app:layout_constraintTop_toBottomOf="@+id/qr_scanTxt"
                    tools:layout_editor_absoluteX="0dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputScan_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15.60dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/exo2_regular"
                    android:hint="@string/mini_password"
                    android:inputType="numberPassword"
                    android:textColor="#333333"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/gateway_seperator_1"
                    app:layout_constraintTop_toBottomOf="@+id/gateway_seperator_1"
                    app:layout_constraintVertical_bias="1.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>