<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mqtt.workactiv.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_control"
        android:name="com.mqtt.workactiv.ui.control.ControlFragment"
        android:label="@string/title_control"
        tools:layout="@layout/fragment_control" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.mqtt.workactiv.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_setting_to_gatewayFragment"
            app:destination="@id/gatewayFragment"
            app:popUpTo="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_setting_to_accountFragment2"
            app:destination="@id/accountFragment"
            app:popUpTo="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_setting_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:popUpTo="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_setting_to_databaseFragment2"
            app:destination="@id/databaseFragment2"
            app:popUpTo="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_setting_to_termsFragment"
            app:destination="@id/termsFragment"
            app:popUpTo="@id/navigation_setting" />
    </fragment>
    <fragment
        android:id="@+id/gatewayFragment"
        android:name="com.mqtt.workactiv.ui.GatewayFragment"
        android:label="fragment_gateway"
        tools:layout="@layout/fragment_gateway" >
        <action
            android:id="@+id/action_gatewayFragment_to_navigation_setting"
            app:destination="@id/navigation_setting" />
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.mqtt.workactiv.ui.AccountFragment"
        android:label="fragment_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_accountFragment_to_navigation_setting"
            app:destination="@id/navigation_setting" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.mqtt.workactiv.ui.AboutFragment"
        android:label="fragment_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_aboutFragment_to_navigation_setting"
            app:destination="@id/navigation_setting" />
    </fragment>
    <fragment
        android:id="@+id/databaseFragment2"
        android:name="com.mqtt.workactiv.ui.DatabaseFragment"
        android:label="fragment_database"
        tools:layout="@layout/fragment_database" >
        <action
            android:id="@+id/action_databaseFragment2_to_navigation_setting2"
            app:destination="@id/navigation_setting" />
    </fragment>
    <fragment
        android:id="@+id/termsFragment"
        android:name="com.mqtt.workactiv.ui.TermsFragment"
        android:label="fragment_terms"
        tools:layout="@layout/fragment_terms" >
        <action
            android:id="@+id/action_termsFragment_to_navigation_setting"
            app:destination="@id/navigation_setting" />
    </fragment>
</navigation>